# AgClimateAF_indices

./: ._README.md  README.md  pyproject.toml
agroclimate_indices/: run_pipeline.py
agroclimate_indices/config/: ._variable_map.yaml  thresholds.yaml  variable_map.yaml
agroclimate_indices/core/: ._export.py  ._io.py  climatology.py  export.py  io.py  prepare.py  stats.py  temporal.py  units.py
agroclimate_indices/crop/: drought.py  et0.py  radiation_wind.py  rainfall.py  seasonality.py  temperature.py  water_balance.py
agroclimate_indices/integrated/: ._scores.py  scores.py
agroclimate_indices/livestock/: cold_wet_dust_vector.py  heat.py  pasture.py
examples/: ._run_africa.sh  run_africa.sh  smoke_test_synthetic_netcdf.py
